--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Webpack App</title>
+  <title>Devacademy</title>
 </head>
 <body>
-<h1>Hello world!</h1>
-<h2>Tip: Check your console serve</h2>
-<script src="/dist/index.js"></script>
+<h1>Devacademy. Lesson 7</h1>
+<h3><a href="/pages/dom_change_example.html">Change DOM</a></h3>
 </body>
 
 </html>
