--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <title>Devacademy</title>
+    <meta charset="utf-8"/>
+    <title>Devacademy</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
-<body>
-<h1>Devacademy. Lesson 7</h1>
-<h3><a href="/pages/dom_change_example.html">Change DOM</a></h3>
-</body>
+    <body>
+        <div class="container">
+            <h1>Devacademy. Lesson 7</h1>
+            <h3><a href="/pages/js_project.html">Js project</a></h3>
+            <h3><a href="/pages/ts_project.html">Ts project</a></h3>
+        </div>
+    
+    </body>
 
 </html>
