--- a/public/pages/js_project.html
+++ b/public/pages/js_project.html
@@ -24,7 +24,7 @@
             
             <div class="person_add">
                 <label for="js_person_name">Add person</label>
-                <input type="text" id="js_person_name">
+                <input type="text" id="js_person_name" placeholder="Name and surname">
                 <button type="button" id="js_person_add">Save</button>
             </div>
 
