--- a/public/pages/ts_project.html
+++ b/public/pages/ts_project.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>JS Project|Devacademy</title>
   <link rel="stylesheet" href="/css/main.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!--  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
 </head>
 
 <body>
